<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.kssandra</groupId>
	<artifactId>ksd_task</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>ksd_task</name>
	<description>Kssandra Tasks</description>

	<properties>
		<java.version>1.11</java.version>
		<ksd.persistence.version>0.0.3-SNAPSHOT</ksd.persistence.version>
		<ksd.alphavantage_client.version>0.0.2-SNAPSHOT</ksd.alphavantage_client.version>
		<ksd.coingecko_client.version>0.0.1-SNAPSHOT</ksd.coingecko_client.version>
		<ksd.core.version>0.0.3-SNAPSHOT</ksd.core.version>
	</properties>
	<dependencies>

		<!-- Internal dependencies -->
		<dependency>
			<groupId>com.kssandra</groupId>
			<artifactId>ksd_persistence</artifactId>
			<version>${ksd.persistence.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.kssandra</groupId>
			<artifactId>alphavantage_client</artifactId>
			<version>${ksd.alphavantage_client.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.kssandra</groupId>
			<artifactId>coingecko_client</artifactId>
			<version>${ksd.coingecko_client.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.kssandra</groupId>
			<artifactId>ksd_core</artifactId>
			<version>${ksd.core.version}</version>
		</dependency>
		
		<!-- External dependencies -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <scope>test</scope>
		</dependency>
 		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <scope>test</scope>
		</dependency>
				
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>test</scope>
		</dependency>

		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
